
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int __NR_io_setup ;
 int syscall (int ,int,char**) ;

void iosetup_pound(int calls) {
 int x;
 char *ptr = ((void*)0);

 for (x = 0; x < calls; x++) {
  syscall(__NR_io_setup, 65530, &ptr);
 }
}
